Fix avatars on small screens

--- a/client/stylesheets/summit2014.less
+++ b/client/stylesheets/summit2014.less
@@ -28,7 +28,6 @@ html, body {
 }
 
 #main {
-  // overflow:auto;
   padding-bottom:@footer-height; /* this needs to be bigger than footer height*/
 }
 
@@ -62,12 +61,15 @@ h3.text-muted a {
 }
 img.img-thumbnail-40 {
   height: 50px;
+  min-width: 50px;
 }
 img.img-thumbnail-20 {
   height: 30px;
+  min-width: 30px;
 }
 img.img-thumbnail-120 {
   height: 130px;
+  min-width: 130px;
 }
 img.about-img {
   margin-right: 1em;
